Realizado modificações no projeto e implementado configurações para docker.